# newton-lsq-mcp

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
docs/guides/: configuration.md  filters-and-dates.md
docs/reference/: lsq-api-endpoints.md  security.md  tools.md
docs/superpowers/plans/: 2026-04-15-lsq-mcp-implementation.md
docs/superpowers/specs/: 2026-04-14-lsq-mcp-design.md  decisions-log.md  progress-log.md
npm/: package.json  run.js
src/: auth.rs  client.rs  config.rs  error.rs  integration_tests.rs  lib.rs  login.rs  main.rs  metadata.rs  models.rs  server.rs
src/tools/: activities.rs  analytics.rs  instructions.rs  leads.rs  lists.rs  mod.rs  opportunities.rs  sales.rs  tasks.rs  users.rs
