[package]
name = "newton-lsq-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for Newton School — read-only LSQ CRM data"
license = "MIT"

[dependencies]
rmcp = { version = "1.2", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
dirs = "6"
open = "5"

[features]
local = []
staging = []

[profile.release]
strip = true
lto = true
codegen-units = 1
