[package]
name = "lsq-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for LeadSquared CRM — read-only data access"
license = "MIT"

[dependencies]
rmcp = { version = "1.2", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "query"] }
dirs = "6"
# Credential encryption
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

[features]
local = []
staging = []

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
